# long-code-bench

./: .gitignore  .gitmodules  QA_answer.ipynb  Qwen-swebench-32k  README.md  SWE_Eval.err  SWE_Eval.out  amazon_api.py  answer.py  async_eval.py  automatic_count.py  code_qa_statistics.py  codeqa.py  count_files.py  count_repo_tokens.py  divide_into_buckets.py  download_repo.sh  eval.py  eval.sh  eval_multinode.sh  eval_multinode_old.sh  eval_ray.sh  example.py  filter_questions.py  launch.sh  llm_launcher-12121840.err  llm_launcher-12121840.out  llm_launcher-12122844.err  llm_launcher-12122844.out  pyproject.toml  ray_vllm.sh  requirements.txt  test.py  test_ray.py  validate_answers.py  validate_gpt.ipynb
conf/: config.yaml
conf/dataset/: sbench_128K.yaml  sbench_1M.yaml  sbench_256K.yaml  sbench_32K.yaml  sbench_512K.yaml  sbench_64K.yaml  swebenc_verified_tuned_small.yaml  swebench_tuned_32k.yaml  swebench_tuned_64K.yaml  swebench_verified_tuned.yaml  swebench_verified_tuned_128k.yaml  swebench_verified_tuned_random_small.yaml
conf/dataset/codeqa/: 128K.yaml  1M.yaml  256K.yaml  32K.yaml  512K.yaml  64K.yaml  smallrepos.yaml
conf/model/: claude35rag.yaml  claude3_5haiku.yaml  claude3_5sonnet.yaml  deepseekb.yaml  gemini15pro.yaml  gemini25pro.yaml  gemini2flash.yaml  gpt41.yaml  gpt4o.yaml  gpt4omini.yaml  jamba.yaml  jamba_large.yaml  jambab.yaml  llama4scout.yaml  llamab.yaml  qwen2.5-1M.yaml  qwen25coder.yaml
src/long_code_bench/data/: codeqa.py  count_tokens.py  detect_topics.py  extract_defs.py  mask_functions.py  patch_tests.py  repo.py  repo_tests.py  tune_swebench.py
src/long_code_bench/inference/: codeqa_eval.py  harness.py  hf_eval.py  json_eval.py
src/long_code_bench/models/: __init__.py  anthropic.py  api.py  base.py  bedrock.py  cineca_api.py  gemini.py  open.py  openai.py  together.py  vllm.py  vllmactor.py
src/long_code_bench/rag/: rag.py
src/long_code_bench/repo/: repository.py
src/swe_bench/: long_swe_bench.sh
src/swe_bench/swebench/harness/: constants.py  docker_build.py  docker_utils.py  log_parsers.py  run_evaluation.py  test_spec.py  utils.py
src/swe_bench/swebench/inference/make_datasets/: bm25_retrieval.py  create_instance.py  utils.py
