[project]
dependencies = [
    "datasets>=3.1.0,<4",
    "transformers>=4.46.2,<5", 
    "flash-attn>=2.7.0.post2,<3", 
    "pyserini>=0.43.0,<0.44"
]
description = "Add a short description here"
name = "long-code-bench"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["nvidia", "conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.pypi-options]
no-build-isolation = ["flash_attn"]

[tool.pixi.pypi-dependencies]
long_code_bench = { path = ".", editable = true }
swebench = { path = "src/swe_bench", editable = true, extras = ["inference"] }

[tool.pixi.dependencies]
cuda = {version="*", channel="nvidia"}
pytorch = {version="2.5.*", channel="pytorch"}
pytorch-cuda = {version="12.1.*", channel="pytorch"}
faiss-gpu = "1.8"
ruff = ">=0.6.7,<0.7"
setuptools = ">=75.3.0,<76"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.ruff.lint]
preview = true
select = ["E", "C", "D", "F", "W", "B", "Q", "N", "I", "ANN", "DOC", "TID"]
ignore = ["D100", "D107", "D206", "W191"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D104", "F401"]
"src/swe_bench/**" = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.pydocstyle]
convention = "google"
