[project]
dependencies = [
    "transformers>=4.46.2,<5",
    "editdistance>=0.8.1,<0.9",
    "hydra-core>=1.3.2,<2",
    "pyserini>=0.43.0,<0.44",
    "anthropic>=0.45.2,<0.46",
    "datasets>=3.2.0,<4",
]
description = "Add a short description here"
name = "long-code-bench"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["nvidia", "conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.pypi-options]
no-build-isolation = ["flash_attn", "causal-conv1d", "mamba-ssm"]

[tool.pixi.pypi-dependencies]
long_code_bench = { path = ".", editable = true }
swebench = { path = "src/swe_bench", editable = true }

[tool.pixi.dependencies]
cuda = { version = "*", channel = "nvidia" }
pytorch = { version = "2.4.*", channel = "pytorch" }
pytorch-cuda = { version = "12.1.*", channel = "pytorch" }
faiss-gpu = "1.8"
ruff = ">=0.6.7,<0.7"
setuptools = ">=75.3.0,<76"
jedi = ">=0.19.2,<0.20"

[tool.pixi.feature.plot.dependencies]
matplotlib = ">=3.10.0,<4"
datasets = ">=3.2.0,<4"
plotly = ">=5.24.1,<6"
statsmodels = ">=0.14.4,<0.15"

[tool.pixi.tasks]
eval = "python eval.py"
make_qa = "python src/long_code_bench/data/codeqa.py"
make_swebench_tuned = "python src/long_code_bench/data/tune_swebench.py"
harness = "python -m swebench.harness.run_evaluation"
harness_tuned = "python src/long_code_bench/inference/harness.py"

[tool.pixi.environments]
plot = { features = ["plot"], no-default-feature = true }

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.ruff.lint]
preview = true
select = ["E", "C", "D", "F", "W", "B", "Q", "N", "I", "ANN", "DOC", "TID"]
ignore = ["D100", "D107", "D206", "W191"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D104", "F401"]
"src/swe_bench/**" = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.pydocstyle]
convention = "google"
